--- a/static/styles.css
+++ b/static/styles.css
@@ -24,7 +24,7 @@ h1 {
     text-align: center;
   }
 
-.circle {
+#circle {
     position: relative;
     left: 30%;
     width: 280px;
@@ -68,17 +68,15 @@ h1 {
     border-radius: 5px;
     font-size: 25px;
 }
-.min {
+
+#work, #break {
+    text-align: center;
     color:#f6f0e7;
     font-size: 25px;
     padding-top: 20px;
     padding-bottom: 20px;
     margin-top: 0px;
     margin-bottom: 0px;
-}
-
-.neznau{
-    text-align: center;
 }
 
 #reset {
@@ -104,6 +102,8 @@ h1 {
 
 #break-min, #work-min{
     font-weight: bold;
+    text-align: center;
+    color:#f6f0e7;
 }
 
 #start:hover, #reset:hover{
